# segment-studio

./: .gitignore  README.md  main.py  pyproject.toml
sam3-backend/: app.py
sam3-frontend/: README.md  index.html  package-lock.json  package.json
sam3-frontend/src/: App.css  App.jsx
sam3-frontend/src/api/: sam3Client.js
sam3-frontend/src/components/: ImageUpload.css  ImageUpload.jsx  ImageWithBox.css  ImageWithBox.jsx  ImageWithPoints.css  ImageWithPoints.jsx  MaskVisualization.css  MaskVisualization.jsx  PromptInput.css  PromptInput.jsx  ResultsDisplay.css  ResultsDisplay.jsx
